--- a/SpendSmart/templates/home.html
+++ b/SpendSmart/templates/home.html
@@ -22,6 +22,7 @@
             padding: 20px;
             max-width: 800px;
             width: 100%;
+            overflow: auto;
         }
         table {
             width: 100%;
