--- a/SpendSmart/templates/index.html
+++ b/SpendSmart/templates/index.html
@@ -54,7 +54,7 @@
 <body>
     <div class="login-container">
         <h2>Login to SpendSmart</h2>
-        <form action="home" method="POST">
+        <form action="home1" method="POST">
             {% csrf_token %}
             <input type="text" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
