--- a/SpendSmart/templates/index.html
+++ b/SpendSmart/templates/index.html
@@ -1,7 +1,7 @@
 <!-- home.html -->
 {% extends 'base.html' %}
 
-{% block title %}Home - My Django App{% endblock %}
+{% block title %}SpendSmart Login{% endblock %}
 
 {% block content %}
 <style>
