--- a/SpendSmart/templates/base.html
+++ b/SpendSmart/templates/base.html
@@ -41,6 +41,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Analytics</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
       </ul>
     </div>
     {% endif %}
