--- a/SpendSmart/templates/base.html
+++ b/SpendSmart/templates/base.html
@@ -27,10 +27,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Transactions</a>
+          <a class="nav-link" href="/transactions">Transactions</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Splits</a>
