--- a/SpendSmart/templates/home.html
+++ b/SpendSmart/templates/home.html
@@ -3,8 +3,8 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome home</h1>
-{{transactions}}
+<!-- <h1>Welcome home</h1> -->
+<!-- {{transactions}} -->
 <h1>Transaction List</h1>
     <table>
         <thead>
