--- a/SpendSmart/templates/analysis.html
+++ b/SpendSmart/templates/analysis.html
@@ -59,7 +59,7 @@
                     <label for="month">Month:</label>
                     <input type="number" class="form-control" id="month" name="month" {% if month %} value = {{month}} {% endif %} required>
                 </div>
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit" class="btn btn-primary">Analyze</button>
             </form>
         </div>
         {% if Chart %}
