--- a/SpendSmart/templates/base.html
+++ b/SpendSmart/templates/base.html
@@ -36,10 +36,10 @@
           <a class="nav-link" href="#">Splits</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Budget</a>
+          <a class="nav-link" href="/budget">Budget</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Analytics</a>
+          <a class="nav-link" href="/analysis">Analytics</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
