--- a/SpendSmart/templates/base.html
+++ b/SpendSmart/templates/base.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="/transactions">Transactions</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Splits</a>
+          <a class="nav-link" href="/splits">Splits</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/budget">Budget</a>
