--- a/SpendSmart/templates/home.html
+++ b/SpendSmart/templates/home.html
@@ -3,25 +3,66 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+<style>
+    .table-responsive {
+    max-height:550px;
+}
+</style>
 <!-- <h1>Welcome home</h1> -->
 <!-- {{transactions}} -->
-<h1>Transaction List</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Description</th>
-                <th>Amount</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for transaction in transactions %}
-            <tr>
-                <td>{{ transaction.0 }}</td>
-                <td>{{ transaction.1 }}</td>
-                <td>{{ transaction.2 }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<div class="row container">
+    <div class="col-md-6">
+        <!-- First vertical division -->
+        <h2>Recent 10 transactions</h2>
+        <div class="container table-responsive">
+            
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Description</th>
+                        <th>Date</th>
+                        <th>Amount</th>
+                    </tr>
+                </thead>
+              <tbody class="">
+                {% for transaction in transactions|slice:"0:10" %}
+                    <tr>
+                        <td>{{ transaction.0 }}</td>
+                        <td>{{ transaction.1|date:"Y-m-d"  }}</td>
+                        <td>{{ transaction.2 }}</td>
+                    </tr>
+                    {% endfor %}
+              </tbody>
+            </table>
+            
+          </div>
+          <div class="container mt-5"><a href="/transactions" class="btn btn-primary">Show More</a></div>
+          
+    </div>
+    <div class="col-md-6">
+        <!-- Second vertical division -->
+        <div class="container mt-5">
+            <h3>This month</h1>
+            <div class="row">
+                
+              <div class="col-md-6">
+                <div class="card bg-success text-white mb-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Income</h5>
+                    <p class="card-text">Total Income: $<span id="incomeAmount">{{income}}</span></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="card bg-danger text-white mb-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Expense</h5>
+                    <p class="card-text">Total Expense: $<span id="expenseAmount">{{expense}}</span></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+</div>
 {% endblock %}
